--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "clean": "git clean -xdf node_modules",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e .env --",
-    "start": "pnpm with-env nodemon"
+    "start": "pnpm with-env nodemon",
+    "webui": "pnpm with-env nodemon --config nodemon-webui.json"
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "1.0.5",
+    "@koa/bodyparser": "^5.0.0",
     "@msgpack/msgpack": "3.0.0-beta2",
+    "@types/koa": "^2.15.0",
+    "@types/koa-router": "^7.4.8",
     "axios": "^1.6.7",
     "bitcoinjs-lib": "^6.1.5",
     "bitcore-lib": "^10.0.23",
@@ -21,6 +25,10 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.4.2",
     "ecpair": "^2.1.0",
+    "koa": "^2.15.0",
+    "koa-pug": "^5.1.1",
+    "koa-router": "^12.0.1",
+    "pug": "^3.0.2",
     "scryptlib": "github:chainbow/scryptlib#compact",
     "tiny-emitter": "^2.1.0",
     "varuint-bitcoin": "^1.1.2",
